--- a/lore-service/package.json
+++ b/lore-service/package.json
@@ -11,7 +11,7 @@
     "rebuild": "npm run clean && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint 'src/**/*.ts' --fix"
+    "lint:fix": "eslint src/**/*.ts --fix"
   },
   "keywords": [],
   "author": "",
