--- a/mythology-service/package.json
+++ b/mythology-service/package.json
@@ -9,7 +9,7 @@
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint 'src/**/*.ts' --fix"
+    "lint:fix": "eslint src/**/*.ts --fix"
   },
   "keywords": [
     "mythology",
